final changes in files

--- a/index.html
+++ b/index.html
@@ -43,17 +43,79 @@
   </header>
   <main>
     <div class="banner">
-      BANNER
+      <img class="banner_img" src="images/banner2.jpg" alt="Main Banner ">
     </div>
+
     <div class="category_heading">
-      CH
+      Medal Worthy Brands to Bag
     </div>
     <div class="category_items">
-      CI
+      <a href="#"><img class="sale_item" src="images/offer1.jfif"></a>
+      <a href="#"><img class="sale_item" src="images/off2.png"></a>
+      <a href="#"><img class="sale_item" src="images/off3.png"></a>
+      <a href="#"><img class="sale_item" src="images/off4.png"></a>
+      <a href="#"><img class="sale_item" src="images/off6.png"></a>
+      <a href="#"><img class="sale_item" src="images/off7.png"></a>
+      <a href="#"><img class="sale_item" src="images/offc.jfif"></a>
+      <a href="#"><img class="sale_item" src="images/offa.jfif"></a>
+      <a href="#"><img class="sale_item" src="images/f2.png"></a>
+      <a href="#"><img class="sale_item" src="images/f1.png"></a>
+    </div>
+
+    <div class="category_heading">
+      Shop by category
+    </div>
+    <div class="category_items">
+      <a href="#"><img class="sale_item" src="images/c1.jpg"></a>
+      <a href="#"><img class="sale_item" src="images/c2.jpg"></a>
+      <a href="#"><img class="sale_item" src="images/c3.jpg"></a>
+      <a href="#"><img class="sale_item" src="images/c4.jpg"></a>
+      <a href="#"><img class="sale_item" src="images/c5.jpg"></a>
+      <a href="#"><img class="sale_item" src="images/c6.jpg"></a>
+      <a href="#"><img class="sale_item" src="images/c7.jpg"></a>
     </div>
   </main>
   <footer>
-    F
+    <div class="footer_container">
+      <div class="footer_col">
+        <h3>Online Shopping</h3>
+        <a href="#">MEN</a>
+        <a href="#">WOMEN</a>
+        <a href="#">KIDS</a>
+        <a href="#">HOME & LIVING</a>
+        <a href="#">BEAUTY</a>
+        <a href="#">STUDIO <sup>New</sup></a>
+        <a href="#">Gift Cards</a>
+        <a href="#">Myntra Insider</a>
+      </div>
+
+      <div class="footer_col">
+        <h3>Customer Policies</h3>
+        <a href="#">Contact Us</a>
+        <a href="#">FAQ</a>
+        <a href="#">T&C</a>
+        <a href="#">Term Of Use</a>
+        <a href="#">Track Orders</a>
+        <a href="#">Shipping</a>
+        <a href="#">Cancellation</a>
+        <a href="#">Returns</a>
+        <a href="#">Privacy policy</a>
+        <a href="#">Grievance Offer</a>
+
+      </div>
+
+      <div class="footer_col">
+        <h3>Useful Links</h3>
+        <a href="#">Blog</a>
+        <a href="#">Career</a>
+        <a href="#">Site Map</a>
+        <a href="#">Corporate Information</a>
+        <a href="#">Whitehat</a>
+        <a href="#">Cleartrip</a>
+      </div>
+    </div>
+    <hr>
+    <div class="copyright">© 2024 www.myntra.com. All rights reserved.</div>
   </footer>
  
 </body>
