sidebar made and completed the project:)

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       <img class="banner_img" src="images/banner2.jpg" alt="Main Banner ">
     </div>
 
+    <div class="sidebar">
+      <p class="sidebar_content">FLAT ₹300 OFF</p>
+    </div>
+
     <div class="category_heading">
       Medal Worthy Brands to Bag
     </div>
